<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="ST170_Axis" Id="{dbaa44de-361e-427c-a913-b71cf08d8d62}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
    const170_01Z : AxisLinMotConst_t := (POS_MIN := 0, POS_MAX := 150, VELO_MAX := 1500, VELO_MANU := 50);

END_VAR
VAR_GLOBAL
    axis170_01Z : AxisLinMot_t;
END_VAR
VAR_GLOBAL RETAIN
    // Recipe values are managed elsewhere
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>